# GenAI_Project_CTAI

./: .gitignore  README.md  __init__.py  pyproject.toml
data/chroma/: chroma.sqlite3
evaluation/: rag_answer_eval.json  rag_eval.json  rag_metrics.json  rag_results.jsonl
rag/: pipeline.py
rag_wixqa/: __init__.py
rag_wixqa/chunking/: strategies.py
rag_wixqa/data/: load_wixqa.py
rag_wixqa/eval/: retrieval_eval.py
rag_wixqa/vectorstores/: chroma_store.py
scripts/: compute_rag_metrics.py  eval_chunking.py  eval_rag_answers.py  ingest_kb.py  rag_answer.py
scripts/rag_wixqa/: config.py
scripts/rag_wixqa/chunking/: strategies.py
scripts/rag_wixqa/data/: load_wixqa.py  models.py
scripts/rag_wixqa/eval/: retrieval_eval.py
scripts/rag_wixqa/rag/: pipeline.py
scripts/rag_wixqa/vectorstores/: chroma_store.py
src/rag_wixqa/: __init__.py  config.py
src/rag_wixqa/data/: models.py
src/rag_wixqa/embeddings/: embedding_models.py
